<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Barre d'outils -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple"
        app:title="@string/photo_album"
        app:titleTextAppearance="@style/ToolbarTitleStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="16dp"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/input_album_identifier">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_et"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="34dp"
        android:text="@string/search"
        app:cornerRadius="10dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/photo_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        tools:text="Ma bibliothèque"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:textColor="@color/black" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/photo_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        tools:src="@mipmap/ic_launcher"
        app:cornerRadius="100dp"
        android:scaleType="centerCrop" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>